--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-swift:
-    name: Build (Swift ${{ matrix.swift }})
+    name: ${{ matrix.name }} (Swift ${{ matrix.swift }})
     runs-on: macos-latest
     strategy:
       fail-fast: false
@@ -20,16 +20,20 @@ jobs:
           - swift: '5.1'
             xcode: '11.3.1'
             action: build
+            name: Build
           - swift: '5.2'
             xcode: '11.7'
             action: test
+            name: Build & Test
           - swift: '5.3'
             xcode: '12.4'
             action: test
+            name: Build & Test
           - swift: '5.4'
             # TODO: Use '12.5' this once we have access to macOS 11 and Xcode 12.5.
             xcode: '12.4'
             action: test
+            name: Build & Test
     steps:
     - name: Clone
       uses: actions/checkout@v2
@@ -42,7 +46,7 @@ jobs:
     - name: macOS with Swift Package Manager
       run: swift ${{ matrix.action }}
   build-xcode:
-    name: Build (Xcode ${{ matrix.xcode }}, ${{ matrix.platform }})
+    name: ${{ matrix.name }} (Xcode ${{ matrix.xcode }}, ${{ matrix.platform }})
     runs-on: macos-${{ matrix.macos }}
     strategy:
       fail-fast: false
@@ -57,16 +61,25 @@ jobs:
             xcode: '11.3'
             macos: '10.15'
             action: build
+            name: Build
+            name_watchos: Build
           - swift: '5.2'
             xcode: '11.7'
             macos: latest
+            name: Build & Test
+            name_watchos: Build
           - swift: '5.3'
             xcode: '12.4'
             macos: latest
+            name: Build & Test
+            name_watchos: Build
+          - platform: watchOS
+            name: ${{ matrix.name_watchos }}
           # TODO: Enable this once we have access to macOS 11 and Xcode 12.5.
           # - swift: '5.4'
           #   xcode: '12.5'
           #   macos: latest
+          #   name: Build & Test
     steps:
     - name: Clone
       uses: actions/checkout@v2
