.github: use exactly Swift 5.4, con fuerza

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift: ['5.4', '5.3', '5.2', '5.1']
+        swift: ['5.1', '5.2', '5.3', '5.4']
         platform: [macOS, iOS, tvOS, watchOS]
-        semver_prefix: ['~']
         include:
           - swift: '5.1'
             # The macOS 11 environment no longer includes Swift 5.1.
@@ -41,8 +40,15 @@ jobs:
           # TODO: Remove this once macos-latest >= 11
           - swift: '5.4'
             macos: '11'
-            # TODO: Remove this once mxcl/xcodebuild#29 is resolved or Swift 5.4.1 is released.
-            semver_prefix:
+          # TODO: Remove these once mxcl/xcodebuild#29 is resolved or Swift 5.4.1 is released.
+          - swift: '5.1'
+            semver_prefix: '~'
+          - swift: '5.2'
+            semver_prefix: '~'
+          - swift: '5.3'
+            semver_prefix: '~'
+          - swift: '5.4'
+            semver_prefix: ''
     steps:
     - name: Clone
       uses: actions/checkout@v2
