--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Clone
       uses: actions/checkout@v2
     - name: ${{ matrix.name || 'Build & Test' }}
-      uses: mxcl/xcodebuild@v1
+      uses: chris-araman/xcodebuild@swift-version
       with:
         action: ${{ matrix.action }}
         platform: ${{ matrix.platform }}
