--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,17 +42,6 @@ jobs:
             macos: '11'
           - swift: '5.5'
             macos: '11'
-          # TODO: Remove these once mxcl/xcodebuild#29 is resolved or Swift 5.4.1 is released.
-          - swift: '5.1'
-            semver_prefix: '~'
-          - swift: '5.2'
-            semver_prefix: '~'
-          - swift: '5.3'
-            semver_prefix: '~'
-          - swift: '5.4'
-            semver_prefix: '='
-          - swift: '5.5'
-            semver_prefix: '='
     steps:
     - name: Clone
       uses: actions/checkout@v2
@@ -61,7 +50,7 @@ jobs:
       with:
         action: ${{ matrix.action }}
         platform: ${{ matrix.platform }}
-        swift: ${{ matrix.semver_prefix }}${{ matrix.swift }}
+        swift: ~${{ matrix.swift }}
         code-coverage: true
         quiet: false
         warnings-as-errors: true
