--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   lint:
     name: Lint
-    runs-on: macos-latest
+    # CocoaPods requires Xcode 12.5, which is currently only available on macos-11, in order to validate watchOS tests.
+    # TODO: Use macos-latest once it is >= 11.
+    runs-on: macos-11
     steps:
     - name: Clone
       uses: actions/checkout@v2
