.github: cancel previous workflows when new commits are pushed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,12 @@
 name: Continuous Integration
-
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   lint:
     name: Lint
