--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       run: script/lint
   build-test:
     name: ${{ matrix.name || 'Build & Test' }} (Swift ${{ matrix.swift }}, ${{ matrix.platform-name || matrix.platform }})
-    runs-on: macos-${{ matrix.macos || 'latest' }}
+    runs-on: macos-${{ matrix.macos || '11' }}
     strategy:
       fail-fast: false
       matrix:
@@ -45,15 +45,6 @@ jobs:
           - swift: '5.5'
             platform: mac-catalyst
             platform-name: Mac Catalyst
-            action: build
-            name: Build
-            # TODO: Remove this once macos-latest >= 11.
-            macos: '11'
-          # TODO: Remove this once macos-latest >= 11.
-          - swift: '5.4'
-            macos: '11'
-          - swift: '5.5'
-            macos: '11'
     steps:
     - name: Clone
       uses: actions/checkout@v2
