--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,11 @@ jobs:
           - swift: '5.1'
             # The macOS 11 environment no longer includes Swift 5.1.
             macos: '10.15'
-            # CombineCloudKitTests require Swift 5.2.
+          # XCTest for watchOS requires Swift 5.4.
+          - swift: '5.1'
+            platform: watchOS
             action: build
             name: Build
-          # XCTest for watchOS requires Swift 5.4.
           - swift: '5.2'
             platform: watchOS
             action: build
@@ -58,7 +59,7 @@ jobs:
         quiet: false
         warnings-as-errors: true
     - name: Coverage
-      if: ${{ matrix.name != 'Build' }}
+      if: ${{ matrix.action != 'build' }}
       uses: codecov/codecov-action@v1
       with:
         flags: ${{ matrix.platform }},swift${{ matrix.swift }}
