--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Clone
       uses: actions/checkout@v2
     - name: ${{ matrix.name || 'Build & Test' }}
-      uses: mxcl/xcodebuild@catalyst-driver-kit
+      uses: mxcl/xcodebuild@v1
       with:
         action: ${{ matrix.action }}
         platform: ${{ matrix.platform }}
