.github: cache Swift dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,13 @@ jobs:
     steps:
     - name: Clone
       uses: actions/checkout@v2
+    - name: Cache Swift Dependencies
+      uses: actions/cache@v2
+      with:
+        path: .build
+        key: spm-${{ runner.os }}-${{ hashFiles('Package.resolved') }}
+        restore-keys: |
+          spm-${{ runner.os }}-
     - name: Lint
       run: script/lint
   build-test:
@@ -46,6 +53,14 @@ jobs:
     steps:
     - name: Clone
       uses: actions/checkout@v2
+    - name: Cache Swift Dependencies
+      uses: actions/cache@v2
+      with:
+        path: .build
+        key: spm-${{ runner.os }}-swift${{ matrix.swift }}-${{ matrix.platform }}-${{ hashFiles('Package.resolved') }}
+        restore-keys: |
+          spm-${{ runner.os }}-swift${{ matrix.swift }}-${{ matrix.platform }}-
+          spm-${{ runner.os }}-
     - name: ${{ matrix.name || 'Build & Test' }}
       uses: mxcl/xcodebuild@v1
       with:
@@ -78,5 +93,12 @@ jobs:
     steps:
     - name: Clone
       uses: actions/checkout@v2
+    - name: Cache Swift Dependencies
+      uses: actions/cache@v2
+      with:
+        path: .build
+        key: spm-${{ runner.os }}-${{ hashFiles('Package.resolved') }}
+        restore-keys: |
+          spm-${{ runner.os }}-
     - name: Sanitize
       run: swift test --sanitize=${{ matrix.sanitizer }}
