✅ Sanitize with latest Swift

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Clone
         uses: actions/checkout@v2
-      - name: Select Current Swift
+      - name: Select Latest Swift
         uses: mxcl/xcodebuild@v1
         with:
           action: none
@@ -75,7 +75,8 @@ jobs:
           directory: .xcodecov
   sanitize:
     name: ${{ matrix.name }} Sanitizer
-    runs-on: macos-latest
+    # TODO: Use macos-latest once it is >= 11.
+    runs-on: macos-11
     strategy:
       fail-fast: false
       matrix:
@@ -91,5 +92,10 @@ jobs:
     steps:
       - name: Clone
         uses: actions/checkout@v2
+      - name: Select Latest Swift
+        uses: mxcl/xcodebuild@v1
+        with:
+          action: none
+          swift: ^5
       - name: Sanitize
         run: swift test --sanitize=${{ matrix.sanitizer }}
